[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Images/Background/Night Street.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Images/logo1.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/Bulletto Killa.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Main Menu/btnStart.gd" type="Script" id=4]
[ext_resource path="res://src/Main Menu/btnQuit.gd" type="Script" id=5]
[ext_resource path="res://assets/Images/Janitor Frames/Janitor Default.png" type="Texture" id=6]
[ext_resource path="res://src/Main Menu/btnOptions.gd" type="Script" id=7]
[ext_resource path="res://src/Main Menu/btnLoad.gd" type="Script" id=8]
[ext_resource path="res://src/Audio/TitleTheme3.wav" type="AudioStream" id=9]
[ext_resource path="res://src/Main Menu/nodMainMenu.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Fade In"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fade Out"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.25 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 4
outline_color = Color( 0.105882, 0.427451, 0.882353, 1 )
font_data = ExtResource( 3 )

[node name="nodMainMenu" type="Node2D"]
script = ExtResource( 10 )

[node name="aniCharacterChange" type="AnimationPlayer" parent="."]
root_node = NodePath("../sprCharacter")
"anims/Fade In" = SubResource( 1 )
"anims/Fade Out" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="spriBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="sprCharacter" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.25 )
position = Vector2( 1440, 576 )
scale = Vector2( 0.244917, 0.210566 )
texture = ExtResource( 6 )

[node name="sprTitle" type="Sprite" parent="."]
position = Vector2( 765.115, 302.828 )
scale = Vector2( 0.23364, 0.260772 )
texture = ExtResource( 2 )

[node name="btnStart" type="Button" parent="."]
margin_left = 128.0
margin_top = 512.0
margin_right = 480.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 4 )
text = "START"
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnLoad" type="Button" parent="."]
margin_left = 128.0
margin_top = 640.0
margin_right = 480.0
margin_bottom = 768.0
custom_fonts/font = SubResource( 4 )
text = "LOAD"
flat = true
script = ExtResource( 8 )

[node name="btnOptions" type="Button" parent="."]
margin_left = 112.0
margin_top = 768.0
margin_right = 527.0
margin_bottom = 896.0
custom_fonts/font = SubResource( 4 )
text = "OPTIONS"
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuit" type="Button" parent="."]
margin_left = 128.0
margin_top = 896.0
margin_right = 480.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 4 )
text = "QUIT"
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aspBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
[connection signal="animation_finished" from="aniCharacterChange" to="." method="_on_aniCharacterChange_animation_finished"]
[connection signal="pressed" from="btnLoad" to="btnLoad" method="_on_btnLoad_pressed"]
[connection signal="finished" from="aspBGM" to="." method="_on_aspBGM_finished"]
